# aiohttp_json_api

./: .editorconfig  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  punch_config.py  punch_version.py  pyproject.toml  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
aiohttp_json_api/: __init__.py  common.py  const.py  context.py  controller.py  decorators.py  encoder.py  errors.py  handlers.py  helpers.py  jsonpointer.py  log.py  middleware.py  pagination.py  processors.py  registry.py  schema.py  setup.py  store.py  typings.py  utils.py
aiohttp_json_api/abc/: contoller.py  field.py  processors.py  schema.py
aiohttp_json_api/compat/: enum.py
aiohttp_json_api/fields/: attributes.py  base.py  decorators.py  relationships.py  trafarets.py
aiohttp_json_api/jsonpointer/: __init__.py
aiohttp_json_api/schema/: __init__.py  abc.py  base_fields.py  common.py  decorators.py  fields.py  relationships.py  schema.py  trafarets.py
docs/: Makefile  aiohttp_json_api.abc.rst  aiohttp_json_api.compat.rst  aiohttp_json_api.fields.rst  aiohttp_json_api.jsonpointer.rst  aiohttp_json_api.rst  aiohttp_json_api.schema.abc.rst  aiohttp_json_api.schema.rst  api.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
examples/fantasy/: controllers.py  docker-compose.yml  entities.py  main.py  models.py  schemas.py  (+2 more)
tests/: conftest.py  test_aiohttp_json_api.py
(+26 files in other folders)
