[tool.poetry]
name = "aiohttp_json_api"
version = "1.0.0"
description = "JSON API Python implementation"
authors = ["Vladimir Bolshakov <vovanbo@gmail.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6"
inflection = "^0.5"
jsonpointer = "^1.10"
multidict = "^5.0"
python-dateutil = "^2.8"
python-mimeparse = "^1.6"
trafaret = "^2.0"
yarl = "^1.6"

[tool.poetry.dev-dependencies]
aiopg = "^1.0.0"
alabaster = "^0.7.12"
attrs = "^20.3.0"
autopep8 = "^1.5.4"
bumpversion = "^0.6.0"
coverage = "^5.3"
cryptography = "^3.2.1"
diff-cover = "^4.0.1"
docker = "^4.4.0"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
invoke = "^1.4.1"
jsonschema = "^3.2.0"
mimesis = "^4.1.2"
mypy = "^0.790"
pep8 = "^1.7.1"
pydantic = "^1.7.2"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.10.1"
PyYAML = "^5.3.1"
Sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"
SQLAlchemy = "^1.3.20"
tox = "^3.20.1"
tox-poetry = "^0.1.2"
rope = "^0.18.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
